--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Kobiton Inc.",
   "scripts": {
     "start": "bash ./scripts/register-grpc-server.sh; nodemon src/index.js --exec babel-node",
-    "test": "jest",
-    "lint": "eslint src",
+    "test": "jest --forceExit",
+    "lint": "eslint \"src/**/*.js\"",
     "build": "bash scripts/build.sh",
     "preinstall": "bash ./scripts/npm-preinstall.sh",
     "postinstall": "bash ./scripts/npm-postinstall.sh",
@@ -44,7 +44,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "5.0.0",
-    "jest": "29.5.0",
+    "jest": "^29.5.0",
     "nodemon": "2.0.6"
   }
 }
