--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "5.0.0",
-    "jest": "29.5.0",
+    "jest": "^29.5.0",
     "nodemon": "2.0.6"
   }
 }
