--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   "dependencies": {
     "@grpc/grpc-js": "1.8.14",
     "@grpc/proto-loader": "0.7.6",
-    "@kobiton/core-service": "3.0.26",
     "@xmldom/xmldom": "0.8.7",
     "archiver": "5.3.1",
     "bluebird": "3.7.2",
     "del": "2.2.0",
     "google-protobuf": "3.21.2",
+    "grpc-health-check": "^2.0.1",
     "keymirror": "0.1.1",
     "lodash": "4.17.21",
     "moment": "2.29.4",
