--- a/src/templates/nodejs/package.json
+++ b/src/templates/nodejs/package.json
@@ -15,6 +15,7 @@
     "canvas": "^2.11.2",
     "chai": "^4.3.7",
     "http-proxy": "^1.18.1",
+    "libxmljs": "^1.0.11",
     "lodash": "^4.17.21",
     "mocha": "^10.2.0",
     "webdriverio": "4.14.4",
